k8s/components/aly/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: websites
  labels:
    app.kubernetes.io/managed-by: argocd
    homelab/cluster: homelab
    homelab/env: prod
    homelab/stack: gitops
