k8s/components/aly/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aly
  namespace: websites
  labels:
    app.kubernetes.io/name: aly
    homelab/stack: aly
spec:
  selector:
    app: aly
  ports:
    - port: 80
      targetPort: 80
