k8s/components/aly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aly
  namespace: websites
  labels:
    app.kubernetes.io/name: aly
    homelab/stack: aly
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aly.in.alybadawy.com
      secretName: aly-tls
  rules:
    - host: aly.in.alybadawy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aly
                port:
                  number: 80
